sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:16: error: not found: value plisPetit
    if (plisPetit(j+1,j)){
        ^